--- a/.github/workflows/get-data.yaml
+++ b/.github/workflows/get-data.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   get-data:
-    name: Get latest data
+    name: Usage Statistics
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
