--- a/.github/workflows/get-data.yaml
+++ b/.github/workflows/get-data.yaml
@@ -1,4 +1,4 @@
-name: Usage Statistics
+name: Get new data
 on:
   schedule:
     # Every day, 5 mins past, hopefully?
@@ -7,14 +7,14 @@ on:
 
 jobs:
   get-data:
-    name: Usage Statistics
+    name: Get latest data
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: 🏗 Set up Python 3.11
+      - uses: actions/checkout@v4
+      - name: 🏗 Set up Python 3.9
         uses: actions/setup-python@v4
         with:
-          python-version: 3.11
+          python-version: 3.9
       - name: Install dependencies
         run : |
           python -m pip install requests
@@ -26,4 +26,3 @@ jobs:
           message: 'Update stats'
           author_name: 'github-actions[bot]'
           author_email: 'github-actions[bot]@users.noreply.github.com'
-
